# mcp-certificate-monitor

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: architecture.md  configuration.md  development.md  overview.md  plan.md  reference.md  tools-resources-prompts.md  usage.md
docs/planning/: plan.md
openspec/changes/archive/2026-06-18-implement-m2-working-mcp-server-tools-only/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-18-implement-m3-resources-and-prompts/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-18-implement-m4-hardened-and-packaged/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-18-m1-core-certificate-engine/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-19-add-documentation/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-19-cleanup-naming-and-version/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-19-refactor-docs-user-focused/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-19-silence-startup-stderr/: design.md  proposal.md  tasks.md
openspec/specs/certificate-fetching/: spec.md
openspec/specs/deployment/: spec.md
openspec/specs/documentation/: spec.md
openspec/specs/host-store/: spec.md
openspec/specs/mcp-prompts/: spec.md
openspec/specs/mcp-resources/: spec.md
openspec/specs/mcp-tools/: spec.md
openspec/specs/user-documentation/: spec.md
src/mcp_certificate_monitor/: __init__.py  cert.py  server.py  store.py
src/mcp_certificate_monitor/cert/: __init__.py  fetcher.py  peer_cert.py  tuple_to_x509.py
tests/: test_cert.py  test_server.py  test_store.py
tests/mcp_certificate_monitor/: conftest.py  test_store.py
(+17 files in other folders)
