[project]
name = "mcp-certificate-monitor"
version = "0.1.2"
description = "A FastMCP server that lets an AI host monitor certificate expiry across a set of domains"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Nate Silva", email = "nate@natesilva.com" }
]
requires-python = ">=3.12"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "fastmcp>=3.4.2",
    "platformdirs>=4.10.0",
    "pydantic>=2.13.4",
]

[project.urls]
Homepage = "https://github.com/natesilva/mcp-certificate-monitor"
Repository = "https://github.com/natesilva/mcp-certificate-monitor"

[project.scripts]
mcp-certificate-monitor = "mcp_certificate_monitor:main"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-mock>=3.15.1",
]
